--- a/style.css
+++ b/style.css
@@ -90,15 +90,26 @@ a:hover {
     /* text-decoration-color: var(--medium-pink); */
 }
 
-nav {
+.basic-bar {
     display: flex;
     background-color: var(--extra-light-pink);
     border-radius: 30px;
     box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
-    justify-content: space-around;
     align-items: center;
     height: 10vh;
-    margin: 1.5%; 
+    margin: 1.5%;
+}
+
+nav {
+    /* justify-content: space-around; */
+
+    /* display: flex;
+    background-color: var(--extra-light-pink);
+    border-radius: 30px;
+    box-shadow: .5vh .5vh 1.5vh 0 var(--light-shadow);
+    align-items: center;
+    height: 10vh;
+    margin: 1.5%;  */
 }
 
 .nav-links {
@@ -168,10 +179,11 @@ section {
     /* color: var(--extra-light-pink); */
 }
 
-#socials-container {
+.socials-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
+    margin: 1.5rem;
 }
 
 .title {
@@ -380,16 +392,17 @@ section {
 /* FOOTER */
 .footer {
     /* color: var(--dark-pink); */
-    display: flex;
     justify-content: center;
-    align-items: center;
-    margin-bottom: 2.5rem;
+    
+    /* margin-bottom: 2.5rem; */
+
 }
 
 #top {
     margin-left: auto;
-    margin-right: 1rem;
+    /* margin-right: 1rem; */
     cursor: pointer;
+    padding-right: 4rem;
 }
 
 #top:hover {
